[tool.poetry]
name = "grid-snake"
version = "1.0.0"
description = "A simple example of solving the Grid Snake problem."
authors = ["Eric J. Whitney"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
